Council-theme : correctif overflow

--- a/themes/council-theme/custom/02-particules/02-modules/delib/delib.scss
+++ b/themes/council-theme/custom/02-particules/02-modules/delib/delib.scss
@@ -36,7 +36,6 @@ h2 {
 
     .detail-delib {   
         padding: 0 25px 0 25px;
-        overflow: auto;
         margin-bottom: 30px;
          @include RWD(mobile){
             margin-top: 25px;
